# fx-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: source_registry.yaml
deploy/: Caddyfile
docs/: architecture.md  claude-code-kickoff.md  sources.md
frontend/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConsensusCard.tsx  SensorStrip.tsx  SourcesTable.tsx  SpreadChart.tsx
frontend/src/lib/: api.test.ts  api.ts
src/fxengine/: config.py  models.py  storage.py  worker.py
src/fxengine/adapters/: __init__.py  aboki.py  base.py  cbn.py  generic.py  luno.py  mock.py  nairatoday.py  ngnrates.py  quidax.py  talentbase.py
src/fxengine/api/: app.py  schemas.py
src/fxengine/engine/: __init__.py  consensus.py  independence.py  normalize.py  outliers.py  reliability.py
tests/: test_adapters_aboki.py  test_adapters_cbn.py  test_adapters_luno.py  test_adapters_nairatoday.py  test_adapters_ngnrates.py  test_adapters_quidax.py  test_adapters_talentbase.py  test_api.py  test_engine.py  test_registry.py  test_storage.py
tests/fixtures/: aboki_eur.html  aboki_gbp.html  aboki_usd.html  cbn_exchange_rates.json  luno_usdtngn.json  nairatoday.html  ngnrates.html  quidax_usdtngn.json  talentbase.html
